# OpenBB

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
driver/: BufferMeta.h  DriverServer.cpp  DriverServer.h  OpenBBDriver.cpp  OpenBBDriverServer.cpp  OpenBBDriverServer.h  OpenBBMarshaller.cpp  OpenBBMarshaller.h  OpenBBRequester.cpp  OpenBBRequester.h  OpenBBWebSocket.cpp  OpenBBWebSocket.h  WebSocket.cpp  WebSocket.h
driver/hardware/: BufferMeta.cpp  BufferMeta.h  DriverStatus.h  ErrorOrigin.h  Marshaller.cpp  Marshaller.h  OpenBBDriver.cpp  OpenBBDriver.h  OpenBBMarshaller.cpp  OpenBBMarshaller.h  OpenBBRequester.cpp  OpenBBRequester.h  Requester.cpp  Requester.h
driver/web/: OpenBBDriverServer.cpp  OpenBBDriverServer.h  OpenBBWebSocket.cpp  OpenBBWebSocket.h
